fix: fix auth;add sidebar

--- a/alembic.ini
+++ b/alembic.ini
@@ -72,4 +72,4 @@ sqlalchemy.url = sqlite+aiosqlite:///data/app.db
 # black.entrypoint = black
 # black.options = -l 79 REVISION_SCRIPT_FILENAME
 
-# è¯·å‹¿åœ¨æ­¤é…ç½®Logging å¦åˆ™æ‰§è¡Œalembicç›¸å…³å‘½ä»¤æ—¶ä¼šè¦†ç›–åŸå§‹çš„é…ç½®
+# ÇëÎğÔÚ´ËÅäÖÃLogging ·ñÔòÖ´ĞĞalembicÏà¹ØÃüÁîÊ±»á¸²¸ÇÔ­Ê¼µÄÅäÖÃ
